--- a/swipe/src/index.css
+++ b/swipe/src/index.css
@@ -9,8 +9,45 @@ li {
   display: flex;
   border-bottom: 1px solid #ccc;
   align-items: center;
+  overflow: hidden;
 }
+
+.swipe-item {
+  position: relative;
+  width: 100%;
+  transition: transform 0.2s;
+}
+
+.swipe-item[data-type='0'] {
+  transform: translate3d(0, 0, 0);
+}
+.swipe-item[data-type='1'] {
+  transform: translate3d(-100px, 0, 0);
+}
+
 .swipe-item-inner {
+  height: 60px;
+  line-height: 60px;
+  box-sizing: border-box;
+  padding-left: 20px;
+  font-size: 16px;
+}
+
+.swipe-btn {
+  display: flex;
+  align-items: center;
+  text-align: left;
+
+  position: absolute;
+  top: 0;
+  left: 100%;
+  height: 100%;
+  font-size: 16px;
+}
+
+.swipe-btn .text {
+  flex: 1;
+  white-space: nowrap;
+  color: #fff;
   padding: 0 20px;
-  height: 80px;
 }
