--- a/swipe/src/swipe.css
+++ b/swipe/src/swipe.css
@@ -1,21 +1,20 @@
+body,html {
+  margin: 0;
+  padding: 0;
+}
 ul,
 li {
   margin: 0;
   padding: 0;
   list-style: none;
-}
-
-.swipe-item-wrapper {
-  display: flex;
-  border-bottom: 1px solid #ccc;
-  align-items: center;
-  overflow: hidden;
+  box-sizing: border-box;
 }
 
 .swipe-item {
   position: relative;
   width: 100%;
   transition: transform 0.2s;
+  border-bottom: 1px solid #ccc;
 }
 
 .swipe-item[data-type='0'] {
